# Zappy

./: .gitignore  README.md
.github/environement/: .clement.env  .gurvan.env  .martin.env  .maxime.env  .victor.env
.github/scripts/: pre-push  unit_tests.sh
.github/workflows/: main.yml
client/ai/: Makefile
client/ai/Source/Client/: IAClient.hpp
client/ai/Source/Errors/: Errors.cpp
client/ai/Source/Ia/: Ia.hpp
client/ai/Source/Options/: IAOptions.cpp
client/gui/: cmake.sh
client/gui/Resources/Food/: apple.gltf
client/gui/Resources/Gems/: cyan.gltf  purple.gltf
client/gui/Source/App/: App.hpp
client/gui/Source/App/Camera/: Camera.cpp
client/gui/Source/App/Events/: EventsHandler.hpp
client/gui/Source/App/Game/: Game.hpp
client/gui/Source/App/Object/: IObject.hpp  IThreeDimensionObject.hpp
client/gui/Source/Client/: Client.cpp
client/gui/Source/Options/: Options.cpp
documentation/: rfc.txt
project/: Makefile  README.md
project/ai/: Makefile  main.c  zappy_ai
project/ai/include/client/: client.h
project/ai/include/options/: options.h  usage.h
project/ai/include/tools/: tools.h
project/ai/source/: main.c
project/ai/source/client/: client.c
project/ai/source/options/: options.c
project/ai/source/tools/: tools.c
project/client/ai/: Makefile
project/client/ai/Source/: Main.cpp
project/client/gui/: CMakeLists.txt  Makefile  cmake.sh  data
project/client/gui/Ressources/Gems/: blue.gltf  green.gltf  red.gltf  yellow.gltf
project/client/gui/Source/: Main.cpp
project/client/gui/Source/App/: App.cpp  App.hpp
project/client/gui/Source/App/Camera/: Camera.hpp
project/client/gui/Source/App/Events/: EventsHandler.hpp  IListener.hpp
project/client/gui/Source/App/Game/: Game.cpp  Game.hpp
project/client/gui/Source/App/Map/: Map.cpp  Map.hpp
project/client/gui/Source/App/Object/: AThreeDimensionObject.cpp  AThreeDimensionObject.hpp  IThreeDimensionObject.hpp
project/client/gui/Source/App/Object/Player/: Player.cpp  Player.hpp
project/client/gui/Source/App/Object/Resource/: Resource.cpp  Resource.hpp
project/client/gui/Source/App/Object/Ressources/: Ressources.cpp  Ressources.hpp
project/client/gui/Source/App/Object/Tile/: Tile.cpp  Tile.hpp
project/client/gui/Source/App/Position/: Position.cpp  Position.hpp
project/client/gui/Source/App/Rendering/: Button.cpp  Button.hpp  Image.hpp
project/client/gui/Source/App/Scenes/: AScene.cpp  IScene.hpp
project/client/gui/Source/App/Scenes/Menu/: MainMenu.cpp  MainMenu.hpp
project/client/gui/Source/App/Teams/: Teams.cpp
project/client/gui/Source/App/Window/: Window.cpp  Window.hpp
project/client/gui/Source/Client/: Client.cpp  Client.hpp
project/client/gui/Source/Errors/: Errors.hpp
project/client/gui/Source/Options/: Options.cpp  Options.hpp
project/gui/: Makefile
project/gui/source/: main.c
project/gui/source/client/: client.c
project/ia/: zappy_ia
project/server/: Makefile  zappy_server
project/server/include/options/: options.h  usage.h
project/server/include/request/: ai_request.h
project/server/include/server/: server.h  server_struct.h
project/server/include/tools/: list.h  tools.h
project/server/include/zappy/: list.h  zappy.h
project/server/source/: main.c
project/server/source/errors/: errors.c  errors.h
project/server/source/options/: options.c  usage.c
project/server/source/server/: server.c
project/server/source/tools/: list.c  tools.c
project/server/source/zappy/: client.c  elevation.c  queue.c  zappy.c
project/server/tests/: test.c
project/tests/: Makefile  test.c
scripts/: build.sh
server/include/errors/: errors.h
server/include/options/: options.h  usage.h
server/include/server/client/: client.h
server/source/: main.c
server/source/server/communication/: communication.c  gui.c
server/source/zappy/: map.c
server/tests/: test.c
(+96 files in other folders)
